[package]
name = "cht"
version = "0.1.0"
edition = "2021"
description = "Rust CLI for interacting with https://cht.sh"
authors = ["blazkowolf"]
readme = "README.md"
repository = "https://github.com/RobDanHill/cht"
license = "MIT"
keywords = ["cht.sh", "cheat.sh", "cheat", "cli", "client"]
categories = ["asynchronous", "command-line-utilities", "concurrency", "network-programming", "web-programming::http-client"]

[dependencies]
futures = "0.3.19"
hyper = { version = "0.14.16", features = ["full"] }
tokio = { version = "1.16.0", features = ["full"] }
