[package]
name = "chtsh"
version = "0.1.1"
edition = "2021"
description = "Rust CLI for interacting with https://cht.sh"
authors = ["blazkowolf"]
readme = "README.md"
repository = "https://github.com/blazkowolf/cht"
license = "MIT"
keywords = ["cheat", "sheet", "cli", "client"]
categories = ["asynchronous", "command-line-utilities", "concurrency", "web-programming::http-client"]

[dependencies]
futures = "0.3.26"
hyper = { version = "0.14.24", features = ["full"] }
clap = { version = "4.1.4", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
